tests/ui/type/missing-let-in-binding.stderr
error: expected identifier, found `:`
  --> $DIR/missing-let-in-binding.rs:4:9
   |
LL |     _foo: i32 = 4;
   |         ^ expected identifier
   |
help: you might have meant to introduce a new binding
   |
LL |     let _foo: i32 = 4;
   |     +++

error: aborting due to 1 previous error

